1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator2-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator2
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
