1.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashgenerator2-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator2-svc
          servicePort: 2345
